# qtick

./: CMakeLists.txt  README.md  Steps.txt
common/: ring.hpp  tick.hpp  timing.hpp
config/: redis.conf
q/: rdb.q
scripts/: run_local.sh  setup.sh
src/feed_sim/: main.cpp
src/ingest_bridge/: main.cpp
